--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
 <link
   rel="stylesheet"
   type="text/css"
+  charset="UTF-8"
+  href="/css/react-draft-wysiwyg.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
 />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
